<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Epileptic Detector</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="tab1">Início</string>
    <string name="tab2">+Add</string>
    <string name="tab3">Histórico</string>
    <string name="tab4">Configurações</string>
    <string name="presentation">Equipe Promobile - Detecção de ataque epiléptico</string>
    <string name="spinner_prompt">Alertas</string>
    <string name="radiobutton1">5</string>
    <string name="radiobutton2">10</string>
    <string name="alerta">Alertas</string>
    <string name="action_refresh">Atualizar</string>
    <string name="action_check_updates">Verificar atualizações</string>
    <string name="action_search">Buscar</string>
    <string name="action_help">Ajuda</string>

    <string-array name="itens_spinner">
        <item>5 segundos</item>
        <item>10 segundos</item>
        <item>15 segundos</item>
    </string-array>

    <string name="title_activity_config__alertas">Configurações</string>
    <string name="title_activity_list_view">ListView</string>
    <string name="salvar">Salvar</string>
    <string name="title_activity_alertas">Alertas</string>
    <string name="title_activity_contatos">Contatos</string>
    <string name="tempo">Selecione o tempo de espera do alerta:</string>
    <string name="abrir_contatos">Abrir Contatos</string>
    <string name="query">Via Query</string>
    <string name="nome">Nome:</string>
    <string name="telefone">Telefone:</string>
    <string name="email">Email:</string>
    <string name="mensagem_instatanea">Mensagem instatânea:</string>
    <string name="organizacao">Organização:</string>
    <string name="endereco">Endereco:</string>
    <string name="notas">Notas:</string>
    <string name="mostrar">mostrar alertdialog</string>
    <string name="epilepsia"> Epilepsia é uma alteração temporária e reversível do funcionamento do cérebro.Em um dos principais sintomas, o paciente primeiro perde a consciência e cai, ficando com o corpo rígido; depois, as extremidades do corpo tremem e contraem-se.</string>
    <string name="title_activity_tela_desmaio">TelaDesmaio</string>
    <string name="title">Desmaio Detectado!</string>
    <string name="show">abrir tela de teste do alertdialog</string>
    <string name="message">Um possível demaio foi detectado! Enviando SMS ao fim da contagem&#8230;</string>
    <string name="backgroundOn">On</string>
    <string name="backgroundOff">Off</string>
    <string name="textoAtivarBack">Deseja ativar aplicação?</string>
    <string name="title_activity_acelerometro">Acelerometro</string>
    <string name="inicio">Início</string>
    <string name="config">Configurações</string>
    <string name="title_activity_configuracoes">Configuracoes</string>
    <string name="tempo15">15 seg</string>
    <string name="tempo5">5 seg</string>
    <string name="title_activity_ativar_app">Ativar aplicação</string>
    <string name="subtitle">Detector de Ataque Epilético</string>
    <string name="usarAcelerometro">Usar o Acelerômetro</string>
    <string name="automated_test_heuristic">Teste Automatizado da Heurística</string>
    <string name="btnSmsSendTest">Teste Envio de SMS</string>
    <string name="btnTestGps">Teste GPS</string>
    <string name="btnStartTest">Iniciar</string>
    <string name="profile2">Preciso</string>
    <string name="tempo10">10 seg</string>
    <string name="profile1">Moderado</string>
    <string name="perfilGeral">Selecione o seu perfil&#8230;</string>
    <string name="profile">Perfis</string>
    <string name="teste">Testes</string>
    <string name="title_activity_tipo_perfil">TipoPerfil</string>
    <string name="tela_configuracoes">Tela configurações</string>
    <string name="title_activity_gps_teste">GpsTesteActivity</string>
    <string name="title_activity_gps_test">Teste GPS</string>
    <string name="txt_chave_teste">Chave Teste</string>
    <string name="txt_tempo">Tempo</string>
    <string name="txt_valor_x_ace">txtValorX</string>
    <string name="txt_valor_y_ace">txtValorY</string>
    <string name="txt_valor_z_ace">txtValorZ</string>
    <string name="txt_valor_x_giro">txtValorXGiro</string>
    <string name="txt_valor_y_giro">txtValorYGiro</string>
    <string name="txt_valor_z_giro">txtValorZGiro</string>
    <string name="txt_valor_vetor">txtValorVetor</string>
</resources>