<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ff000000"
    android:orientation="vertical"
    tools:context=".InicialActivity" >

    <!-- TODO: NAO REMOVER O BOTAO, POIS PARA DEBUGAR A HEURISTICA DE DESMAIO EH MAIS FACIL DEVIDO OS LOGS!!!! -->

    <Button
        android:id="@+id/btnSmsSendTest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:text="@string/btnSmsSendTest"
        android:textAlignment="center"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/btnAutomatedTestHeuristic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/automated_test_heuristic"
        android:textAlignment="center"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/btnTestGps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnTestGps"
        android:textAlignment="center"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/btnShowDialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="showDialogClick"
        android:text="@string/mostrar"
        android:textColor="#ffffffff" />

</LinearLayout>