<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ff000000"
    tools:context=".TelaDesmaio" >

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="31dp" 
        android:textColor="#ffffffff">

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/tempo5"
            android:textSize="13sp"
        	android:textStyle="bold" 
        	android:textColor="#ffffffff"/>

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo10" 
            android:textSize="13sp"
        	android:textStyle="bold"
        	android:textColor="#ffffffff"/>

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tempo15"
            android:textSize="13sp"
        	android:textStyle="bold" 
        	android:textColor="#ffffffff"/>
    </RadioGroup>

    <Button
        android:id="@+id/button1"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/radioGroup1"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="22dp"
        android:layout_marginRight="60dp"
        android:text="@string/salvar"
        android:textSize="13sp"
        android:textStyle="bold" 
        android:textColor="#ffffffff"/>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/tempo"
        android:textSize="16sp"
        android:textStyle="bold"
		android:textColor="#ffffffff"/>

</RelativeLayout>