<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="contatosIntentClick"
            android:text="@string/abrir_contatos" />

        <ImageView
            android:id="@+id/ivFoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_launcher" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/nome"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/telefone"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvTelefone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/email"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/mensagem_instatanea"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvIM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/organizacao"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvOrganizacao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/endereco"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvEndereco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#f0f0f0"
            android:text="@string/notas"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/tvNotas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@null"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#555" />
        
        
    </LinearLayout>

</ScrollView>