<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@android:id/tabhost"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent">
	<LinearLayout
		android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="fill_parent">
		
		<TabWidget
			android:id="@android:id/tabs"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content">
			
			<TextView
				android:tag="tab0"
				android:text="@string/tab1"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent">			
				</TextView>
			
			<TextView
				android:tag="tab2"
				android:text="@string/tab4"
				android:layout_width="wrap_content"
				android:layout_height="fill_parent">
			    
			</TextView>

		
		</TabWidget>
			
		<FrameLayout
			android:id="@android:id/tabcontent"
			android:layout_width="fill_parent"
			android:layout_height="fill_parent">
			<Button  
			     android:id="@+id/btnShowDialog"  
			     android:layout_width="wrap_content"  
			     android:layout_height="wrap_content"  			   
			     android:onClick="showDialogClick"  
			     android:text="@string/show" />  
						
			<ListView
				 android:id="@+id/list1"
				 android:layout_width="fill_parent"
				 android:layout_height="fill_parent">   
			</ListView>
		</FrameLayout>
	</LinearLayout>
</TabHost>